[package]
name = "actor-fun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-rt = "2.2.0"
actix-web = "3.3.2"
config = "0.11.0"
directories = "3.0.2"
geo = "0.18.0"
pdf-create = "0.1.1"
postgres = "0.19.1"
postgres-types = "0.2.1"
tokio-postgres = "0.7.2"
